[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "querystring"
version = "0.1.0"
description = "Stable, encoder-configurable application/x-www-form-urlencoded query-string round-trip with parse / serialize / merge / pick / omit."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "nripankadas07" }]
keywords = ["querystring", "urlencoded", "form", "url", "parse", "serialize", "http"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/nripankadas07/querystring"
Repository = "https://github.com/nripankadas07/querystring"

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
querystring = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
